--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.5",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
